Fix 算法复杂度分析(上) 排版问题

--- a/source/_posts/算法复杂度分析.md
+++ b/source/_posts/算法复杂度分析.md
@@ -41,7 +41,7 @@ public static int cal(int n) {
 
 一个简单的 计算数列和 的代码，也就是 `1, 2, 3, ... ， n-1, n` 所有数字的和。
 
-虽然计算机运行代码的时间，会比想象中的难以计算因为每一行代码都是不同的，还会有很多不确定的情况。但是在计算复杂度时，都会大致将其看作一行代码，花了一个单位时间。
+虽然计算机运行代码的时间，会比想象中的难以计算。因为每一行代码都是不同的，还会有很多不确定的情况。但是在计算复杂度时，都会大致将其看作一行代码，花了一个单位时间。
 
 所以在这段代码中，L2-3 分别运行了一次，L4-5 分别运行了 n 次。那么我将这个代码的运行时间大概估计为 $2n+2$ 次，同时得出了一个结论，**所有代码的执行时间 T(n) 与每行代码的执行次数成正比。**
 
