Fix 机器学习西瓜书 学习笔记 修复 tag

--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -107,13 +107,17 @@ comment: true
 - 样本标记是？
 - 用户「周六」属性值和标记值是？
 
-{% tabs Solution one, -1 %}
-<!-- tab 答案 @key -->
-- 样本是顾客。
-- 一共 5 个。
-- 年收入、性别和职业。
-- 是否为顾客（或好顾客）。
-- 属性值：年收入=低、性别=女和职业=学生。
+{% tabs Sixth unique name %}
+<!-- tab Solution 1@text-width -->
+**This is Tab 1.**
+<!-- endtab -->
+
+<!-- tab Solution 2@font -->
+**This is Tab 2.**
+<!-- endtab -->
+
+<!-- tab Solution 3@bold -->
+**This is Tab 3.**
 <!-- endtab -->
 {% endtabs %}
 
