Update 机器学习西瓜书 增加 经验误差与过拟合 内容

--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -254,6 +254,76 @@ mathjax: true
 
 也就是说，当天上突然掉馅饼的时候你现在吃到了，但是你之后就会遇到很倒霉的事情。这么说应该就能理解没有免费的午餐是什么意思了。
 
+# 经验误差与过拟合
+
+如果在 m 个样本中有 α 个样本分类错误，则错误率 $E=\frac{a}{m}$
+
+**精度**：$1-\frac{a}{m}$，也即是*精度=1-错误率*。
+
+**误差**：学习器的实际预测输出与样本的真实输出之间的差异。（对单个样本的学习）
+
+**训练误差/经验误差**：学习器在训练集上的误差。（整个数据集）
+
+**泛化误差**：在新样本上的误差。
+
+我们希望得到泛化误差小的学习器.然而，我们事先并不知道新样本是什么样，实际能做的是努力使经验误差最小化。
+
+**过拟合**：当学习器把训练样本学得"太好"了的时候，很可能巳经把训练样本自身的一些特点当作了所有潜在样本都会具有的一般性质，这样就会导致泛化性能下降。这就是过拟合。
+
+> 过拟合是无法彻底避免的，我们所能做的只是“缓解”，或者说减小其风险。
+
+**欠拟合**：这是指对训练样本的一般性质尚未学好。
+
+> 欠拟合比较容易克服，例如在决策树学习中扩展分支、在神经网络学习中增加训练轮数等。
+
+![过拟合与欠拟合直观对比](https://st.blackyau.net/blog/26/4.png)
+
+## 留出法
+
+这是评估方法的一种，使用**测试集**来测试学习器对新样本的判别能力，在测试集上面的**测试误差**就可以作为泛化误差的近似。同时要使测试集应尽可能的与训练集互斥，也就是测试样本尽量不在训练集中出现、未在训练过程中使用过。
+
+假定数据集包含 1000 个样本，将其划分为一个 S 集合包含 700 个样本，另一个 T 集合包含 300 个样本。用 S 集合进行训练后，在使用 T 集合进行测试。通过统计测试结果的正确率，就能知道精度和错误率了。这个方法就是留出法。
+
+> 划分的时候一般都是 训练集样本数 > 测试集样本数。 $\frac{2}{3} \text{\textasciitilde} \frac{4}{5}$ 的样本用于训练，剩下的测试。
+
+划分训练集和测试集时，要尽可能保持数据分布的一致性。
+
+比如整个数据集有 500 个正例、500 个反例，则划分时 S 应包含 350 个正例、350 个反例，而 T 则包含150 个正例和 150 个反例。这个也叫**分层采样**，若 S、T 中样本类别比例差别很大，则误差估计将由于训练/测试数据分布的差异而产生偏差。
+
+还有一个问题，如果初始数据集里面样本的顺序很极端，前 500 个全是正例，后 500 个全是反例。直接划分的话就不准确，所以单次使用留出法得到的估计结果往往不够稳定可靠，在使用留出法时，一般要采用若干次随机划分、重复进行实验评估后取平均值作为留出法的评估结果。
+
+## 交叉检验法
+
+先将数据集划分为 k 个大小相似的互斥子集，也就是每一个子集都尽可能保持数据分布的一致性（都不重复）。
+
+> 然后每次都只取其中的最后一个为**测试集**，前面几个都用来做**训练集**。
+
+最终返回的是这 k 个测试结果的均值。显然，交叉验证法评估结果的稳定性和保真性在很大程度上取决于 k 的取值，为强调这一点，通常把交叉验证法称 k 折交叉验证。k 最常用的取值为 10，此时称为 10 折交叉验证。
+
+![10 折交叉验证示意图](https://st.blackyau.net/blog/26/5.png)
+
+假定数据集 D 中包含 m 个样本，若令 k=m ， 则得到了交叉验证法的一个特列：留一法。也就是每一个子集只包含一个样本。测试集就取整个数据集的最后一个。
+
+留一法的评估结果往往被认为比较准确，但是他也有缺陷，留一法在数据集比较大时训练模型的计算开销可能是难以忍受的。另外，留一法的估计结果也未必永远比其他评估方法准确，“没有免费的午餐”定理对实验评估方法同样适用。
+
+## 自助法
+
+给定包含 m 个样本的数据集 D ， 我们对它进行采样产生数据集 D':
+
+每次随机从 D 中挑选一个样本， 将其拷贝放入 D' 然后再将该样本放回初始数据集 D 中，使得该样本在下次采样时仍有可能被采到;这个过程重复执行 m 次后，我们就得到了包含 m 个样本的数据集 D'，这就是自助采样的结果。
+
+我们还可以估计样本在 m 次采样中始终不被采到的概率
+
+$$
+\begin{aligned}
+P&=\lim\limits_{m→∞}(1-\frac{1}{m})^m \\
+&=\frac{1}{e} \\
+&≈0.368
+\end{aligned}
+$$
+
+自助法在数据集较小、难以有效划分训练/测试集时很有用;此外，自助法能从初始数据集中产生多个不同的训练集，这对集成学习等方法有很大的好处.然而，自助法产生的数据集改变了初始数据集的分布，这会引入估计偏差。因此，在初始数据量足够时，留出法和交叉验证法更常用一些。
+
 # 术语中英对照
 
 | 中文 | 英文 | 备注 |
