Update 机器学习西瓜书 增加 错误率与精度

--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -266,7 +266,7 @@ mathjax: true
 
 **泛化误差**：在新样本上的误差。
 
-我们希望得到泛化误差小的学习器.然而，我们事先并不知道新样本是什么样，实际能做的是努力使经验误差最小化。
+我们希望得到泛化误差小的学习器。然而，我们事先并不知道新样本是什么样，实际能做的是努力使经验误差最小化。
 
 **过拟合**：当学习器把训练样本学得"太好"了的时候，很可能巳经把训练样本自身的一些特点当作了所有潜在样本都会具有的一般性质，这样就会导致泛化性能下降。这就是过拟合。
 
@@ -323,6 +323,111 @@ P&=\lim\limits_{m→∞}(1-\frac{1}{m})^m \\
 $$
 
 自助法在数据集较小、难以有效划分训练/测试集时很有用;此外，自助法能从初始数据集中产生多个不同的训练集，这对集成学习等方法有很大的好处.然而，自助法产生的数据集改变了初始数据集的分布，这会引入估计偏差。因此，在初始数据量足够时，留出法和交叉验证法更常用一些。
+
+# 性能度量
+
+对模型泛化能力的评价标准就是性能度量。
+
+因为对于不同的模型，使用不同的性能度量方法会导致不同的评判结果。这意味着模型的“好坏”是相对的，一个好的模型不只是它的算法好坏，还取决于它的任务需求。
+
+比如回归任务最常用的性能度量是“均方误差”（mean squared error）
+
+
+$$ E(f;D) = \frac{1}{m}\sum\limits_{i = 1}^m {{{(f({x_i}) - {y_i})}^2}} $$
+
+$E$：数学期望，也就是均值。是一种概率论概念，样本出现的情况结合出现的概率，是一种加权平均。（最后一步都是求平均值，这个公式其实和平均值有点类似）
+
+$f$：代指我们训练的模型。
+
+$D$：数据集。
+
+$m$：样本的总数量。
+
+$i$：当前样本的下标。
+
+$x_i$：第 i 个样本的预测结果的标签（好瓜/坏瓜）。
+
+$y_i$：第 i 个样本的标签真实值。
+
+$\displaystyle\sum_{i=1}^m(x_i)$：通过下标将所有 x 相加起来。和 for 循环差不多。
+
+```java
+int sum = 0;
+int list[] = {0, 1, 2, 3, 4};
+for(i=1; i<=m; i++){
+    sum = sum + list[i];
+}
+```
+
+简单来说，就是把所有预测值和真实值相减，然后在求他们的平方之和。最后再求个平均值。
+
+## 错误率与精度
+
+错误率和精度是分类任务（预测的结果是布尔值的任务）中最常用的两种性能度量。
+
+他们既适用于二分类任务，也适用于多分类任务。
+
+### 错误率
+
+对样例集 $D$，分类错误率定义为
+
+$$ E(f;D) = \frac{1}{m}\sum\limits_{i = 1}^m Ⅱ(f({x_i}) \ne {y_i}) $$
+
+$E(f;D)$：对模型 $f$ 和数据集 $D$ 的数学期望。
+
+$m$：样本的总数量。
+
+$i$：当前样本的下标。
+
+$x_i$：第 i 个样本的预测结果的标签（好瓜/坏瓜）。
+
+$y_i$：第 i 个样本的标签真实值。
+
+$Ⅱ$：相当于定义的一个函数，和 $f(x)$ 概念类似，只是它这个符号比较迷惑。
+
+$$
+Ⅱ(f({x_i}) \ne {y_i}) = \begin{cases}
+1 ,&\text{if }f(x_i) \ne y_i \\
+0 ,&\text{if }f(x_i) = y_i
+\end{cases}
+$$
+
+也就是：
+
+- 如果预测值和实际值**相等**，那么这个函数输出 0。
+- 如果预测值和实际值**有偏差**，那么这个函数输出 1。
+
+最后又把他们输出的所有值全部加起来，再求个平均值。
+
+### 精度
+
+精度也就是正确率，上面求出来了错误率，那么直接用 1 减去它就行了。
+
+$$ acc(f;D) = 1-E(f;D) $$
+
+$acc(f;D)$：acc 是 Accuracy 的缩写，意思是 准确/精确 率。
+
+$E(f;D)$：就是上面的错误率。
+
+当然了你也可以通过改写上面的 $Ⅱ$ 函数，直接计算精度。
+
+$$ E(f;D) = \frac{1}{m}\sum\limits_{i = 1}^m Ⅱ(f({x_i}) \color{red}= \color{black}{y_i}) $$
+
+将 $Ⅱ$ 函数改成：
+
+- 如果预测值和实际值**相等**，那么这个函数输出 1。
+- 如果预测值和实际值**有偏差**，那么这个函数输出 0。
+
+$$
+Ⅱ(f({x_i}) \color{red}=\color{black} {y_i}) = \begin{cases}
+1 ,&\text{if }f(x_i) \color{red}=\color{black} y_i \\
+0 ,&\text{if }f(x_i) \color{red}\ne\color{black} y_i
+\end{cases}
+$$
+
+> 注意这里的 $=$ 和 $\ne$ 与上面错误率的公式有差别。
+
+通过改写后，我们就相当于通过 $Ⅱ$ 直接求出了正确样本的总个数，再通过最外面的 $\frac{1}{m}$ 就直接可以求出正确率的百分比了。
 
 # 术语中英对照
 
