Fix 机器学习西瓜书 公式错误

--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -332,8 +332,9 @@ $$
 
 比如回归任务最常用的性能度量是“均方误差”（mean squared error）
 
-
-$$ E(f;D) = \frac{1}{m}\sum\limits_{i = 1}^m {{{(f({x_i}) - {y_i})}^2}} $$
+$$
+E(f;D) = \frac{1}{m}\sum_{i = 1}^m \text{Ⅱ}(f(x_i) - y_i)^2
+$$
 
 $E$：数学期望，也就是均值。是一种概率论概念，样本出现的情况结合出现的概率，是一种加权平均。（最后一步都是求平均值，这个公式其实和平均值有点类似）
 
@@ -371,7 +372,9 @@ for(i=1; i<=m; i++){
 
 对样例集 $D$，分类错误率定义为
 
-$$ E(f;D) = \frac{1}{m}\sum\limits_{i = 1}^m Ⅱ(f({x_i}) \ne {y_i}) $$
+$$
+E(f;D) = \frac{1}{m}\sum_{i = 1}^m \text{Ⅱ}(f(x_i) \ne y_i)
+$$
 
 $E(f;D)$：对模型 $f$ 和数据集 $D$ 的数学期望。
 
