Fix 机器学习西瓜书 显示样式错误

--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -173,13 +173,9 @@ mathjax: true
 
 给出上表所对应的版本空间，用符号 * 表示取任何值都可以。
 
-{% tabs Solution tow, -1 %}
-<!-- tab 答案 @key -->
-
+{% note info no-icon 答案 %}
 ![1](https://st.blackyau.net/blog/26/1.png)
-
-<!-- endtab -->
-{% endtabs %}
+{% endnote %}
 
 ### 版本空间例题2
 
@@ -192,13 +188,9 @@ mathjax: true
 
 该数据集的版本空间是？
 
-{% tabs Solution three, -1 %}
-<!-- tab 答案 @key -->
-
+{% note info no-icon 答案 %}
 ![2](https://st.blackyau.net/blog/26/2.svg)
-
-<!-- endtab -->
-{% endtabs %}
+{% endnote %}
 
 # 归纳偏好
 
@@ -333,7 +325,7 @@ $$
 比如回归任务最常用的性能度量是“均方误差”（mean squared error）
 
 $$
-E(f;D) = \frac{1}{m}\sum_{i = 1}^m \text{Ⅱ}(f(x_i) - y_i)^2
+E(f;D) = \frac{1}{m}\sum_{i = 1}^m (f(x_i) - y_i)^2
 $$
 
 $E$：数学期望，也就是均值。是一种概率论概念，样本出现的情况结合出现的概率，是一种加权平均。（最后一步都是求平均值，这个公式其实和平均值有点类似）
@@ -414,7 +406,7 @@ $E(f;D)$：就是上面的错误率。
 
 当然了你也可以通过改写上面的 $Ⅱ$ 函数，直接计算精度。
 
-$$ E(f;D) = \frac{1}{m}\sum\limits_{i = 1}^m Ⅱ(f({x_i}) \color{red}= \color{black}{y_i}) $$
+$$ E(f;D) = \frac{1}{m}\sum\limits_{i = 1}^m Ⅱ(f({x_i}) \color{blue}= \color{black}{y_i}) $$
 
 将 $Ⅱ$ 函数改成：
 
@@ -422,9 +414,9 @@ $$ E(f;D) = \frac{1}{m}\sum\limits_{i = 1}^m Ⅱ(f({x_i}) \color{red}= \color{bl
 - 如果预测值和实际值**有偏差**，那么这个函数输出 0。
 
 $$
-Ⅱ(f({x_i}) \color{red}=\color{black} {y_i}) = \begin{cases}
-1 ,&\text{if }f(x_i) \color{red}=\color{black} y_i \\
-0 ,&\text{if }f(x_i) \color{red}\ne\color{black} y_i
+Ⅱ(f({x_i}) \color{blue}=\color{black} {y_i}) = \begin{cases}
+1 ,&\text{if }f(x_i) \color{blue}=\color{black} y_i \\
+0 ,&\text{if }f(x_i) \color{blue}\ne\color{black} y_i
 \end{cases}
 $$
 
