--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -424,6 +424,65 @@ $$
 
 通过改写后，我们就相当于通过 $Ⅱ$ 直接求出了正确样本的总个数，再通过最外面的 $\frac{1}{m}$ 就直接可以求出正确率的百分比了。
 
+## 查准率与查全率
+
+**查准率**（Precision）：判定是对的样例中，到底有多少真是对的。
+
+**查全率**（Recall）：所有对的样例，你找出了多少，或者说你判断对了多少。
+
+<table>
+   <tr  rowspan="2">
+      <th rowspan="2">真实情况</th>
+      <th colspan="2">预测结果</th>
+   </tr>
+   <tr>
+      <td>正例</td>
+      <td>反例</td>
+   </tr>
+   <tr>
+      <td>正例</td>
+      <td>TP（真正例）true positive</td>
+      <td>FN（假反例）false negative</td>
+   </tr>
+   <tr>
+      <td>反例</td>
+      <td>FP（假正例）false positive</td>
+      <td>TN（真反例）true negative</td>
+   </tr>
+</table>
+
+查准率 P 与 查全率 R 分别定义为
+
+$$ p=\frac{TP}{TP+FP} $$
+
+$$ R=\frac{TP}{TP+FN} $$
+
+查准率和查全率是一对矛盾的变量。一般来说，其中一个高另一个就会低。
+
+比如，要尽可能将好瓜选出来，那么就增加选瓜的数量，如果把所有瓜都选上了，好瓜肯定也都选上了。但是这样的话查准率就会很低。反之亦然。
+
+## F1 度量
+
+F1 度量是用于找到一个查全率和查准率的平衡点算法。
+
+$$
+F1 = \frac{2×P×R}{P+R} = \frac{2×TP}{样例总数+TP-TN}
+$$
+
+F1 度量还可以通过调整参数，让他向查全率偏重，或者是向查准率偏重。
+
+$$
+F_β = \frac{(1+β^2×P×R)}{(β^2×P)+R}
+$$
+
+$$
+F_β = \begin{cases}
+偏重查全率 &β>1\\
+标准 F1 &β=1\\
+偏重查准率 &β<1
+\end{cases}
+$$
+
 # 术语中英对照
 
 | 中文 | 英文 | 备注 |
