--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -436,20 +436,22 @@ $$
       <th colspan="2">预测结果</th>
    </tr>
    <tr>
-      <td>正例</td>
-      <td>反例</td>
+      <td  align="center">正例</td>
+      <td  align="center">反例</td>
    </tr>
    <tr>
-      <td>正例</td>
+      <td  align="center">正例</td>
       <td>TP（真正例）true positive</td>
       <td>FN（假反例）false negative</td>
    </tr>
    <tr>
-      <td>反例</td>
+      <td  align="center">反例</td>
       <td>FP（假正例）false positive</td>
       <td>TN（真反例）true negative</td>
    </tr>
 </table>
+
+> 这个就叫混淆矩阵
 
 查准率 P 与 查全率 R 分别定义为
 
@@ -482,6 +484,172 @@ F_β = \begin{cases}
 偏重查准率 &β<1
 \end{cases}
 $$
+
+## 宏/微F1
+
+很多时候我们有多个二分类混淆矩阵(忘了混淆矩阵是什么的去[这里](https://blackyau.cc/26.html#%E6%9F%A5%E5%87%86%E7%8E%87%E4%B8%8E%E6%9F%A5%E5%85%A8%E7%8E%87)看看)，然后我们有一个方法可以在 n 个二分类混淆矩阵上综合考察查准率和查全率。
+
+- 宏：先计算查准率和查全率再求平均值。
+- 微：先计算 TP、FP、TN、FN 的平均值再求查准率和查全率。
+
+### 宏
+
+你要先回想以前之前的，查准率（Precision）和查全率（Recall）。
+
+$$ P=\frac{TP}{TP+FP} $$
+
+$$ R=\frac{TP}{TP+FN} $$
+
+宏查准率与宏查全率就是把他们求了个平均值。
+
+宏（macro）查准率：
+
+$$
+macro-P = \frac{1}{n}\sum_{i=1}^nP_i
+$$
+
+宏查全率：
+
+$$
+macro-R = \frac{1}{n}\sum_{i=1}^nR_i
+$$
+
+
+可以理解为，先把每一个混淆矩阵的 P 和 R 都求出来，然后再把他们求个平均值就行了。
+
+后面的宏 F1 也就比较好理解，还是回想之前计算 F1 的公式。
+
+$$
+F1 = \frac{2×P×R}{P+R}
+$$
+
+令上面式子的 $P=macro-P$ 同时令 $R=macro-R$ 那么就可以得到下面的式子了
+
+$$
+macro-F1 = \frac{2×macro-P×macro-R}{macro-P×macro-R}
+$$
+
+### 微
+
+介绍完了宏，再来介绍一下微（micro）。还是放一下这个混淆矩阵.
+
+<table>
+   <tr  rowspan="2">
+      <th rowspan="2">真实情况</th>
+      <th colspan="2">预测结果</th>
+   </tr>
+   <tr>
+      <td  align="center">正例</td>
+      <td  align="center">反例</td>
+   </tr>
+   <tr>
+      <td  align="center">正例</td>
+      <td>TP（真正例）true positive</td>
+      <td>FN（假反例）false negative</td>
+   </tr>
+   <tr>
+      <td  align="center">反例</td>
+      <td>FP（假正例）false positive</td>
+      <td>TN（真反例）true negative</td>
+   </tr>
+</table>
+
+当有多个混淆矩阵的时候，你也会有很多个 TP、FN、FP、TN。那么你可以先分别计算所有混淆矩阵的 TP、FN、FP、TN 的平均值。我们将求过平均值后的数上面画一个横线，那么就有。
+
+$TP$ 的平均值为 $\overline{TP}$
+
+$FN$ 的平均值为 $\overline{FN}$
+
+$FP$ 的平均值为 $\overline{FP}$
+
+$TN$ 的平均值为 $\overline{TN}$
+
+有了这四个参数，我们再回头看看之前的查准率和查全率公式：
+
+$$ P=\frac{TP}{TP+FP} $$
+
+$$ R=\frac{TP}{TP+FN} $$
+
+把里面的变量都用计算平均值过后的替换一下，就可以计算微（micro）查准率：
+
+$$
+micro-P = \frac{\overline{TP}}{\overline{TP}+\overline{FP}}
+$$
+
+微查全率也很简单啦：
+
+$$
+micro-R = \frac{\overline{TP}}{\overline{TP}+\overline{FN}}
+$$
+
+后面的微 F1 也是把每一位的都替换一下就行了：
+
+$$
+micro-F1 = \frac{2×micro-P×micro-R}{micro-P×micro-R}
+$$
+
+## P-R ROC AUC
+
+<table>
+   <tr  rowspan="2">
+      <th rowspan="2">真实情况</th>
+      <th colspan="2">预测结果</th>
+   </tr>
+   <tr>
+      <td  align="center">正例</td>
+      <td  align="center">反例</td>
+   </tr>
+   <tr>
+      <td  align="center">正例</td>
+      <td>TP（真正例）true positive</td>
+      <td>FN（假反例）false negative</td>
+   </tr>
+   <tr>
+      <td  align="center">反例</td>
+      <td>FP（假正例）false positive</td>
+      <td>TN（真反例）true negative</td>
+   </tr>
+</table>
+
+### P-R
+
+P-R 曲线横坐标是查全率：
+
+$$ R=\frac{TP}{TP+FN} $$
+
+纵坐标是查准率：
+
+$$ P=\frac{TP}{TP+FP} $$
+
+![P-R曲线](https://st.blackyau.net/blog/26/6.png)
+
+### ROC
+
+横坐标的两个参数，都是混淆矩阵的第二行，这个分子的 FP 是我们不想要的。
+
+ROC 曲线的横坐标是假正例率（Flase Positive Rate）：
+
+$$ FPR=\frac{FP}{FP+TN} $$
+
+纵坐标的两个参数，都是混淆矩阵的第一行，这个分子的 TP 是我们想要的。
+
+纵坐标是真正例率（True Positive Rate），这个公式和 $R$ 是一摸一样的。
+
+$$ TPR=\frac{TP}{TP+FN} $$
+
+左边这个图在绘制的时候，是人工美化让他变光滑了的。
+
+但是右边这个图才是实际情况下的图，因为样本数量是有限的，两个点之间的距离也都是直线，所以就会有很多锯齿。
+
+左边那个图，中间的虚线不用去理解它。同时你也要注意，左图的 AUC 指的是阴影部分，和那个虚线没有任何关系。
+
+![ROC](https://st.blackyau.net/blog/26/7.png)
+
+### AUC
+
+AUC（Area Under ROC Curve）指的 ROC 曲线下面的面积，而这个面积越大，这个模型就越好。
+
+虽然 AUC 这个概念只是说的 ROC 但是 P-R 曲线也是曲线下面的面积越大越好。
 
 # 术语中英对照
 
