Update 机器学习西瓜书 ROC 曲线描述

--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -637,6 +637,8 @@ $$ FPR=\frac{FP}{FP+TN} $$
 
 $$ TPR=\frac{TP}{TP+FN} $$
 
+> 我们最想要的就是横坐标很小，但是纵坐标很大的模型。
+
 左边这个图在绘制的时候，是人工美化让他变光滑了的。
 
 但是右边这个图才是实际情况下的图，因为样本数量是有限的，两个点之间的距离也都是直线，所以就会有很多锯齿。
