Fix 机器学习西瓜书 统一答案标签样式

--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -112,15 +112,13 @@ mathjax: true
 - 样本标记是？
 - 用户「周六」属性值和标记值是？
 
-{% tabs Solution one, -1 %}
-<!-- tab 答案 @key -->
+{% note info no-icon 答案 %}
 - 样本是顾客。
 - 一共 5 个。
 - 年收入、性别和职业。
 - 是否为顾客（或好顾客）。
 - 属性值&标记值：年收入=低、性别=女和职业=学生。
-<!-- endtab -->
-{% endtabs %}
+{% endnote %}
 
 ## 假设空间
 
