Fix 机器学习西瓜书 混淆矩阵内容居中

--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -430,8 +430,8 @@ $$
 
 <table>
    <tr  rowspan="2">
-      <th rowspan="2">真实情况</th>
-      <th colspan="2">预测结果</th>
+      <th rowspan="2" align="center">真实情况</th>
+      <th colspan="2" align="center">预测结果</th>
    </tr>
    <tr>
       <td  align="center">正例</td>
@@ -439,13 +439,13 @@ $$
    </tr>
    <tr>
       <td  align="center">正例</td>
-      <td>TP（真正例）true positive</td>
-      <td>FN（假反例）false negative</td>
+      <td align="center">TP（真正例）true positive</td>
+      <td align="center">FN（假反例）false negative</td>
    </tr>
    <tr>
       <td  align="center">反例</td>
-      <td>FP（假正例）false positive</td>
-      <td>TN（真反例）true negative</td>
+      <td align="center">FP（假正例）false positive</td>
+      <td align="center">TN（真反例）true negative</td>
    </tr>
 </table>
 
@@ -533,8 +533,8 @@ $$
 
 <table>
    <tr  rowspan="2">
-      <th rowspan="2">真实情况</th>
-      <th colspan="2">预测结果</th>
+      <th rowspan="2" align="center">真实情况</th>
+      <th colspan="2" align="center">预测结果</th>
    </tr>
    <tr>
       <td  align="center">正例</td>
@@ -542,13 +542,13 @@ $$
    </tr>
    <tr>
       <td  align="center">正例</td>
-      <td>TP（真正例）true positive</td>
-      <td>FN（假反例）false negative</td>
+      <td align="center">TP（真正例）true positive</td>
+      <td align="center">FN（假反例）false negative</td>
    </tr>
    <tr>
       <td  align="center">反例</td>
-      <td>FP（假正例）false positive</td>
-      <td>TN（真反例）true negative</td>
+      <td align="center">FP（假正例）false positive</td>
+      <td align="center">TN（真反例）true negative</td>
    </tr>
 </table>
 
