Fix 机器学习西瓜书 公式错误

--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -524,7 +524,7 @@ $$
 令上面式子的 $P=macro-P$ 同时令 $R=macro-R$ 那么就可以得到下面的式子了
 
 $$
-macro-F1 = \frac{2×macro-P×macro-R}{macro-P×macro-R}
+macro-F1 = \frac{2×macro-P×macro-R}{macro-P+macro-R}
 $$
 
 ### 微
