Fix 机器学习西瓜书 LaTeX

--- a/source/_posts/机器学习西瓜书 学习笔记.md
+++ b/source/_posts/机器学习西瓜书 学习笔记.md
@@ -274,7 +274,7 @@ mathjax: true
 
 假定数据集包含 1000 个样本，将其划分为一个 S 集合包含 700 个样本，另一个 T 集合包含 300 个样本。用 S 集合进行训练后，在使用 T 集合进行测试。通过统计测试结果的正确率，就能知道精度和错误率了。这个方法就是留出法。
 
-> 划分的时候一般都是 训练集样本数 > 测试集样本数。 $\frac{2}{3} \text{\textasciitilde} \frac{4}{5}$ 的样本用于训练，剩下的测试。
+> 划分的时候一般都是 训练集样本数 > 测试集样本数。 $\frac{2}{3} \text{~} \frac{4}{5}$ 的样本用于训练，剩下的测试。
 
 划分训练集和测试集时，要尽可能保持数据分布的一致性。
 
