--- a/source/_posts/算法复杂度分析-下.md
+++ b/source/_posts/算法复杂度分析-下.md
@@ -145,13 +145,13 @@ $$ 1\times\frac{1}{2n}+ 2\times\frac{1}{2n}+ 3\times\frac{1}{2n}+ \dots+n\times\
 平均时间复杂度也可以用上面的方法计算出来，假设数组的长度是 n，根据数据插入的位置的不同，我们可以分为 n 种情况，每种情况的时间复杂度是 $O(1)$。除此之外，还有一种“额外”的情况，就是在数组没有空闲空间时插入一个数据，这个时候的时间复杂度是 $O(n)$。而且，这 n+1 种情况发生的概率一样，都是 $1/(n+1)$。所以，根据加权平均的计算方法，我们求得的平均时间复杂度就是：
 
 $$
-\begin{aligned}
+\begin{align}
 T(n) &= 1\times\frac{1}{n+1}+ 1\times\frac{1}{n+1}+ \dots+ 1\times\frac{1}{n+1}+ n\times\frac{1}{n+1}\\
 &= \frac{(n+1)\times1}{n+1}+n\times\frac{1}{n+1}\\
 &= 1+n\times\frac{1}{n+1}\\
 &= \frac{n}{n}\\
 &= O(1)
-\end{aligned}
+\end{align}
 $$
 
 至此为止，前面的最好、最坏、平均时间复杂度的计算，理解起来应该都没有问题。但是这个例子里的平均复杂度分析其实并不需要这么复杂，不需要引入概率论的知识。这是为什么呢？我们先来对比一下这个 `insert()` 的例子和前面那个 `find()` 的例子，你就会发现这两者有很大差别。
