Fix 使用Tag Plugins引用站内的其他帖子链接

--- a/source/_posts/机器学习西瓜书_学习笔记.md
+++ b/source/_posts/机器学习西瓜书_学习笔记.md
@@ -485,7 +485,7 @@ $$
 
 ## 宏/微F1
 
-很多时候我们有多个二分类混淆矩阵(忘了混淆矩阵是什么的去[这里](https://blackyau.cc/26.html#%E6%9F%A5%E5%87%86%E7%8E%87%E4%B8%8E%E6%9F%A5%E5%85%A8%E7%8E%87)看看)，然后我们有一个方法可以在 n 个二分类混淆矩阵上综合考察查准率和查全率。
+很多时候我们有多个二分类混淆矩阵(忘了混淆矩阵是什么的去{% post_link 机器学习西瓜书_学习笔记 '这里' %}看看)，然后我们有一个方法可以在 n 个二分类混淆矩阵上综合考察查准率和查全率。
 
 - 宏：先计算查准率和查全率再求平均值。
 - 微：先计算 TP、FP、TN、FN 的平均值再求查准率和查全率。
