--- a/source/_posts/算法复杂度分析-下.md
+++ b/source/_posts/算法复杂度分析-下.md
@@ -14,7 +14,7 @@ mathjax: true
 comment: true
 ---
 
-[上一篇](https://blackyau.cc/24.html) 文章简单的分析了大 O 表示法，还有几个分析的技巧。当然在实际情况下，仅依靠之前的知识无法解决。
+{% post_link 算法复杂度分析-上 '上一篇' %} 文章简单的分析了大 O 表示法，还有几个分析的技巧。当然在实际情况下，仅依靠之前的知识无法解决。
 
 <!-- more -->
 
